# poker-hand-normalizer

./: .gitignore  LICENSE  pyproject.toml
Proj_2_hand_normalizer/: .gitignore  README.md  pyproject.toml
dataset/: Caph - €0.10 NL FAST (6 max) - 202508110733.txt  Caph - €0.10 NL FAST (6 max) - 202508120837.txt  Caph - €0.10 NL FAST (6 max) - 202508121604.txt  Caph - €0.10 NL FAST (6 max) - 202508130937.txt  Caph - €0.10 NL FAST (6 max) - 202508140946.txt  Caph - €0.10 NL FAST (6 max) - 202508171024.txt  Caph - €0.10 NL FAST (6 max) - 202508181613.txt  Caph - €0.10 NL FAST (6 max) - 202508190849.txt  Caph - €0.10 NL FAST (6 max) - 202508201014.txt  Caph - €0.10 NL FAST (6 max) - 202508210938.txt  Caph - €0.10 NL FAST (6 max) - 202508221042.txt  Caph - €0.10 NL FAST (6 max) - 202508221610.txt  Caph - €0.10 NL FAST (6 max) - 202508230731.txt  Caph - €0.10 NL FAST (6 max) - 202508241021.txt  Caph - €0.10 NL FAST (6 max) - 202508241638.txt  Caph - €0.10 NL FAST (6 max) - 202508251024.txt  Caph - €0.10 NL FAST (6 max) - 202508261259.txt  Caph - €0.10 NL FAST (6 max) - 202508271746.txt  Caph - €0.10 NL FAST (6 max) - 202508281411.txt  Caph - €0.10 NL FAST (6 max) - 202508291038.txt  Caph - €0.10 NL FAST (6 max) - 202508301028.txt  Caph - €0.10 NL FAST (6 max) - 202508310944.txt  Caph - €0.10 NL FAST (6 max) - 202509010938.txt  Caph - €0.10 NL FAST (6 max) - 202509020804.txt  Caph - €0.10 NL FAST (6 max) - 202509021017.txt  Caph - €0.10 NL FAST (6 max) - 202509030944.txt  Caph - €0.10 NL FAST (6 max) - 202509040941.txt  Caph - €0.10 NL FAST (6 max) - 202509051001.txt  (+2 more)
(+50 files in other folders)
